--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -8,13 +8,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="lacto">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Donate Milk</a>
+                    <a class="nav-link" href="donor-registration">Donate Milk</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Need Milk</a>
